# Webserv

./: .gitignore  1  C++ (Cpp) poll Exemples - HotExamples.html  CMakeLists.txt  Makefile  Readme.md  load_stress_test.sh  log  makefile.debug  null  r.sh  requests.sh  test.cpp  test_kqueue_tcp_server.cpp  test_non_blocking_accept.cpp  to_keep_for_later.cpp  webserv.config
C++ (Cpp) poll Exemples - HotExamples_files/: banger.js  cmbdv2.js  cmbv2.js  cmp.js  gpt.js  jquery.min.js  js
networking/: Poll.cpp  Poll.hpp  PollFd.cpp  PollFd.hpp  Poll_debugu.cpp  Request.cpp  Request.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp
src/: Constants.hpp  main.cpp
src/Config/: ConfigParser.cpp  ConfigParser.hpp  Server.cpp  Server.hpp  ServerBlock.cpp  ServerBlock.hpp
src/Config/Directives/: Listen.cpp  Location.cpp  Location.hpp  Methods.hpp  Root.cpp
src/Config/Structure/: Bloc.hpp  Line.cpp  Line.hpp
src/HTTP/: Request.cpp  Request.hpp
src/HTTP/Headers/: Header.cpp  Header.hpp  HeaderParser.hpp  Headers.cpp  Headers.hpp
src/HTTP/Request/: RequestLine.hpp
src/HTTP/Request/RequestTarget/: Scheme.cpp  Scheme.hpp  Segment.cpp  Target.hpp
src/network/: SimpleRequest.cpp  SimpleRequest.hpp  Socket.cpp  Socket.hpp  User.cpp  User.hpp  UserBase.cpp  UserBase.hpp
src/parser/: Error.cpp  Error.hpp  Result.hpp  combinators.hpp  slice.hpp
src/parser/bytes/: Eof.cpp  Eof.hpp  Strip.hpp
src/parser/combinators/: Wrap.hpp
src/parser/sequence/: Delimited.hpp
src/utils/: Kqueue.cpp  Kqueue.hpp  KqueueThread.cpp  KqueueThread.hpp  SocketThread.cpp  SocketThread.hpp  Thread.cpp  Thread.hpp
